[package]
name = "fuzzcheck_json_string_generator"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
authors = [
    "Teymour Aldridge <teymour@reasoning.page>"
]
description = "A Fuzzcheck mutator which generates JSON strings."

[dependencies]
fuzzcheck = "0.12.1"

[dev-dependencies]
serde_json = "1.0.83"
