[package]
name = "fuzzcheck_serde_json_generator"
version = "0.1.1"
edition = "2021"
license = "BSD-3-Clause"
authors = [
    "Teymour Aldridge <teymour@reasoning.page>"
]
description = "A Fuzzcheck mutator which generates `serde_json::Value`s."

[dependencies]
fuzzcheck = "0.12.1"
serde_json = { version = "1.0.83" }
